--- a/moviesrestservice/pom.xml
+++ b/moviesrestservice/pom.xml
@@ -59,6 +59,16 @@
 			<artifactId>jose4j</artifactId>
 			<version>0.6.2</version>
 		</dependency>
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.9.13</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <version>2.8.2</version>
+		</dependency>
 	</dependencies>
 	<properties>
 		<jersey.version>2.17</jersey.version>
